--- a/component-library/src/app/pages/request-form/request-form.component.scss
+++ b/component-library/src/app/pages/request-form/request-form.component.scss
@@ -3,7 +3,7 @@
 
 .content-doc-wrapper {
   box-sizing: border-box;
-  max-width: 900px;
+  max-width: 872px;
   margin: 0 auto;
 }
 
